<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>plansys2_upf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.cruzr.2021@alumnos.urjc.es">roi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_core</depend>
  <depend>plansys2_popf_plan_solver</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
